// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav renders a Nav 1`] = `
.c4 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c2 img {
  max-height: 24px;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

.c2 .file__IconPlus-yu39to-0 {
  margin: 0 20px;
}

.c2 .c3 {
  margin: 0;
  vertical-align: middle;
}

.c1 {
  background-color: black;
  border-bottom: 1px solid white;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 52px;
  width: 100%;
  color: white;
  z-index: 10;
}

.c0 a {
  z-index: 10;
}

.c5 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  position: absolute;
  width: 100%;
  text-align: center;
  font-weight: 600;
}

.c5 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:720px) {
  .c2 img {
    max-height: 24px;
  }

  .c2 .c3 {
    font-size: 24px;
  }

  .c2 .file__IconPlus-yu39to-0 {
    margin: 0 10px;
  }
}

@media (max-width:720px) {
  .c5 {
    display: none;
  }
}

<div>
  <div
    className="c0 c1"
  >
    <div
      className="PartnerInline c2"
    >
      <a
        href="/"
      >
        <div
          className="c3 c4"
          onClick={undefined}
          style={undefined}
        >
          
        </div>
      </a>
    </div>
    <div
      className="c5"
    >
      <a
        href="/magazine"
      >
        Artsy Editorial
      </a>
    </div>
  </div>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
</div>
`;

exports[`Nav renders a sponsored nav 1`] = `
.c4 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.c6 {
  width: 15px;
  height: 15px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c2 img {
  max-height: 24px;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

.c2 .c5 {
  margin: 0 20px;
}

.c2 .c3 {
  margin: 0;
  vertical-align: middle;
}

.c1 {
  background-color: black;
  border-bottom: 1px solid white;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 52px;
  width: 100%;
  color: white;
  z-index: 10;
}

.c0 a {
  z-index: 10;
}

.c7 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  position: absolute;
  width: 100%;
  text-align: center;
  font-weight: 600;
}

.c7 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:900px) {
  .c6 {
    width: 13px;
    height: 13px;
  }
}

@media (max-width:720px) {
  .c2 img {
    max-height: 24px;
  }

  .c2 .c3 {
    font-size: 24px;
  }

  .c2 .c5 {
    margin: 0 10px;
  }
}

@media (max-width:720px) {
  .c7 {
    display: none;
  }
}

<div>
  <div
    className="c0 c1"
  >
    <div
      className="PartnerInline c2"
    >
      <a
        href="/"
      >
        <div
          className="c3 c4"
          onClick={undefined}
          style={undefined}
        >
          
        </div>
      </a>
      <svg
        className="c5 c6"
        version="1.1"
        viewBox="0 0 15 15"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="2"
        >
          <g
            fill="white"
            transform="translate(-101.000000, -18.000000)"
          >
            <g
              transform="translate(101.000000, 18.000000)"
            >
              <rect
                height="1"
                width="15"
                x="0"
                y="7"
              />
              <rect
                height="1"
                transform="translate(7.500000, 7.500000) rotate(-90.000000) translate(-7.500000, -7.500000) "
                width="15"
                x="0"
                y="7"
              />
            </g>
          </g>
        </g>
      </svg>
      <a
        href="http://artsy.net"
        onClick={[Function]}
        target="_blank"
      >
        <img
          src="https://artsy-media-uploads.s3.amazonaws.com/GEu3iYW6CQhbVxsjpOYwZQ%2FGKL_Wort-Bildmarke_negative_rgb+2.png"
        />
      </a>
    </div>
    <div
      className="c7"
    >
      <a
        href="/magazine"
      >
        Artsy Editorial
      </a>
    </div>
  </div>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
</div>
`;

exports[`Nav renders a transparent nav 1`] = `
.c4 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c2 img {
  max-height: 24px;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

.c2 .file__IconPlus-yu39to-0 {
  margin: 0 20px;
}

.c2 .c3 {
  margin: 0;
  vertical-align: middle;
}

.c1 {
  background-color: transparent;
  border-bottom: 1px solid white;
  position: absolute;
  top: 0;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 52px;
  width: 100%;
  color: white;
  z-index: 10;
}

.c0 a {
  z-index: 10;
}

.c5 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  position: absolute;
  width: 100%;
  text-align: center;
  font-weight: 600;
}

.c5 a {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (max-width:720px) {
  .c2 img {
    max-height: 24px;
  }

  .c2 .c3 {
    font-size: 24px;
  }

  .c2 .file__IconPlus-yu39to-0 {
    margin: 0 10px;
  }
}

@media (max-width:720px) {
  .c5 {
    display: none;
  }
}

<div>
  <div
    className="c0 c1"
  >
    <div
      className="PartnerInline c2"
    >
      <a
        href="/"
      >
        <div
          className="c3 c4"
          onClick={undefined}
          style={undefined}
        >
          
        </div>
      </a>
    </div>
    <div
      className="c5"
    >
      <a
        href="/magazine"
      >
        Artsy Editorial
      </a>
    </div>
  </div>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
</div>
`;
